--- a/test/Makefile
+++ b/test/Makefile
@@ -211,13 +211,13 @@ ETAGS = etags
 CTAGS = ctags
 am__DIST_COMMON = $(srcdir)/Makefile.in
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/dyy/libzdb-3.2.3/config/missing aclocal-1.16
+ACLOCAL = ${SHELL} /home/dyy/LibzdbForDM/config/missing aclocal-1.16
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
 AR = ar
-AUTOCONF = ${SHELL} /home/dyy/libzdb-3.2.3/config/missing autoconf
-AUTOHEADER = ${SHELL} /home/dyy/libzdb-3.2.3/config/missing autoheader
-AUTOMAKE = ${SHELL} /home/dyy/libzdb-3.2.3/config/missing automake-1.16
+AUTOCONF = ${SHELL} /home/dyy/LibzdbForDM/config/missing autoconf
+AUTOHEADER = ${SHELL} /home/dyy/LibzdbForDM/config/missing autoheader
+AUTOMAKE = ${SHELL} /home/dyy/LibzdbForDM/config/missing automake-1.16
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=none
@@ -261,7 +261,7 @@ LIPO =
 LN_S = ln -s
 LTLIBOBJS = 
 LT_SYS_LIBRARY_PATH = 
-MAKEINFO = ${SHELL} /home/dyy/libzdb-3.2.3/config/missing makeinfo
+MAKEINFO = ${SHELL} /home/dyy/LibzdbForDM/config/missing makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /usr/bin/mkdir -p
 MYSQLCONFIG = /usr/bin/mysql_config
@@ -288,10 +288,10 @@ SHELL = /bin/bash
 STRIP = strip
 UNIT_TEST = test
 VERSION = 3.2.3
-abs_builddir = /home/dyy/libzdb-3.2.3/test
-abs_srcdir = /home/dyy/libzdb-3.2.3/test
-abs_top_builddir = /home/dyy/libzdb-3.2.3
-abs_top_srcdir = /home/dyy/libzdb-3.2.3
+abs_builddir = /home/dyy/LibzdbForDM/test
+abs_srcdir = /home/dyy/LibzdbForDM/test
+abs_top_builddir = /home/dyy/LibzdbForDM
+abs_top_srcdir = /home/dyy/LibzdbForDM
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -321,7 +321,7 @@ host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/dyy/libzdb-3.2.3/config/install-sh
+install_sh = ${SHELL} /home/dyy/LibzdbForDM/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
